# project

./: CMakeLists.txt
Google_tests/: CMakeLists.txt
advcoordesc/: advancedcoordescent.hpp  deps.inc
coorddesc/: CoordDescMethod.h  CoordDescMethod_test.cpp  OldparallCoordDescMethod.h  parallCoordDescMethod.h
gridlip/: deps.inc
rosenbrock/: deps.inc  rosenbrockmethod.hpp
